Arrays.toList() vs stream().toList()